--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^0.15.0",
     "@aws-amplify/backend-cli": "^0.15.0",
+    "@aws-amplify/ui-react": "^6.1.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
